<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelecionarTerrenoActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnPagar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tamanhoterreno_text"
                android:textAllCaps="true"
                android:textSize="30sp"
                app:fontFamily="@font/open_sans_extra_bold" />

            <RadioGroup
                android:id="@+id/radiostamanho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radiotamanho1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="4dp"
                    android:checked="true"
                    android:text="@string/option_tamanho_1_text"
                    android:textColor="@color/textColor"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/open_sans_semi_bold" />

                <RadioButton
                    android:id="@+id/radiotamanho2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/option_tamanho_2_text"
                    android:textColor="@color/textColor"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/open_sans_semi_bold" />

                <RadioButton
                    android:id="@+id/radiotamanho3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/option_tamanho_3_text"
                    android:textColor="@color/textColor"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/open_sans_semi_bold" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/pacotedesejado_text"
                android:textAllCaps="true"
                android:textSize="30sp"
                app:fontFamily="@font/open_sans_extra_bold" />

            <RadioGroup
                android:id="@+id/radiospacote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radiopacote1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="4dp"
                    android:checked="true"
                    android:gravity="fill"
                    android:text="@string/option_pacote_long_1_text"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/open_sans_semi_bold" />

                <RadioButton
                    android:id="@+id/radiopacote2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:gravity="fill"
                    android:text="@string/option_pacote_long_2_text"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/open_sans_semi_bold" />

                <RadioButton
                    android:id="@+id/radiopacote3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:gravity="fill"
                    android:text="@string/option_pacote_long_3_text"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/open_sans_semi_bold" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tipoterreno_text"
                android:textAllCaps="true"
                android:textSize="30sp"
                app:fontFamily="@font/open_sans_extra_bold" />

            <RadioGroup
                android:id="@+id/radiostipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radiotipo1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="4dp"
                    android:checked="true"
                    android:text="@string/option_tipo_1_text"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/open_sans_semi_bold" />

                <RadioButton
                    android:id="@+id/radiotipo2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/option_tipo_2_text"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/open_sans_semi_bold" />

            </RadioGroup>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnPagar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="8dp"
        android:text="@string/pay_button_text"
        android:textSize="36sp"
        app:fontFamily="@font/roboto_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>