<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pagamento">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnConcluirPagamento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/payment_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/precototal_text"
                android:textColor="@color/textpayColor"
                android:textSize="30sp"
                app:fontFamily="@font/open_sans_bold" />

            <TextView
                android:id="@+id/txtviewPrecoTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:textSize="60sp"
                app:fontFamily="@font/open_sans_extra_bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/metodo_de_pagamento_text"
                android:textColor="@color/textpayColor"
                android:textSize="30sp"
                app:fontFamily="@font/open_sans_bold" />

            <LinearLayout
                android:id="@+id/back_btn_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/back_option_pay_stroke"
                android:orientation="vertical"
                android:paddingLeft="32dp"
                android:paddingTop="8dp"
                android:paddingRight="32dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/txtviewSaldoStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/saldo_text"
                    android:textSize="24sp"
                    app:fontFamily="@font/open_sans_bold" />

                <TextView
                    android:id="@+id/txtviewSaldo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="30sp"
                    app:fontFamily="@font/open_sans_extra_bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/em_breve_text"
                android:textColor="@color/textpayColor"
                android:textSize="30sp"
                app:fontFamily="@font/open_sans_bold" />

            <LinearLayout
                android:id="@+id/cripto_pay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="32dp"
                android:alpha="0.3"
                android:background="@drawable/back_option_pay"
                android:orientation="vertical"
                android:paddingLeft="32dp"
                android:paddingTop="8dp"
                android:paddingRight="32dp"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/method_payment_1_text"
                    android:textSize="24sp"
                    app:fontFamily="@font/open_sans_bold" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/method_payment_1_descriptionimage"
                    app:srcCompat="@drawable/cripto" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cc_pay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="32dp"
                android:alpha="0.3"
                android:background="@drawable/back_option_pay"
                android:orientation="vertical"
                android:paddingLeft="32dp"
                android:paddingTop="8dp"
                android:paddingRight="32dp"
                android:paddingBottom="16dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/method_payment_2_text"
                    android:textSize="24sp"
                    app:fontFamily="@font/open_sans_bold" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/method_payment_2_descriptionimage"
                    app:srcCompat="@drawable/cc" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/boleto_pay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="16dp"
                android:alpha="0.3"
                android:background="@drawable/back_option_pay"
                android:orientation="vertical"
                android:paddingLeft="32dp"
                android:paddingTop="8dp"
                android:paddingRight="32dp"
                android:paddingBottom="16dp"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/method_payment_3_text"
                    android:textSize="24sp"
                    app:fontFamily="@font/open_sans_bold" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/method_payment_3_descriptionimage"
                    app:srcCompat="@drawable/boleto" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnConcluirPagamento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:maxLines="1"
        android:paddingLeft="8dp"
        android:paddingTop="16dp"
        android:paddingRight="8dp"
        android:paddingBottom="16dp"
        android:text="@string/concluir_pagamento_button_text"
        android:textSize="30sp"
        app:autoSizeTextType="uniform"
        app:fontFamily="@font/open_sans_extra_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>