<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompraFinalizada">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_parabens_text"
            android:textSize="60sp"
            app:fontFamily="@font/roboto_black" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/desc_parabens_text"
            android:textSize="24sp"
            app:fontFamily="@font/roboto_condensed_regular" />

        <TextView
            android:id="@+id/txtviewCodigoCompra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="@font/roboto_condensed_regular" />

        <Button
            android:id="@+id/btnHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/back_btn_comprar"
            android:padding="8dp"
            android:text="@string/back_home_button_text"
            android:textSize="36sp"
            app:fontFamily="@font/roboto_black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>