<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/topbar_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtviewNome"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:text="@string/default_personname_text"
            android:textSize="24sp"
            app:fontFamily="@font/roboto_black" />

        <TextView
            android:id="@+id/txtviewMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:text="@string/default_moneyquantity_text"
            android:textSize="36sp"
            app:fontFamily="@font/roboto_black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tabs_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topbar_layout">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabfragments"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:tabBackground="@color/colorPrimary"
            app:tabGravity="fill"
            app:tabMode="fixed"
            app:tabTextColor="@color/textColor">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_home_text"
                android:textSize="36sp"
                app:fontFamily="@font/roboto_black" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabTerrenos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_terrenos_text"
                app:fontFamily="@font/roboto_black" />

        </com.google.android.material.tabs.TabLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/conteudo_scroolview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs_layout">

        <FrameLayout
            android:id="@+id/frameConteudo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </FrameLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>